FIX Title set to nowrap to avoid taking too much space on small screen sizes

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -39,6 +39,8 @@ h1 {
     font-size: 3.5rem;
     font-weight: bold;
     font-family: 'Italianno', cursive, sans-serif;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 a {
